fix: apply schema page spacing to other full pages and update shared tab selectors for PrimeNG 20

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -498,7 +498,8 @@ body {
     min-height: 36px;
 }
 
-::ng-deep .p-tablist-tab-list li.p-highlight .p-tab {
+::ng-deep .p-tabs .p-tab.p-tab-active,
+::ng-deep .p-tabs .p-tab[data-p-active='true'] {
     color: var(--color-primary);
     border-color: var(--color-primary);
 }
