--- a/frontend/src/app/modules/policy-engine/policies/policies.component.scss
+++ b/frontend/src/app/modules/policy-engine/policies/policies.component.scss
@@ -1191,7 +1191,7 @@
 }
 
 .tabs-nav {
-    margin: 24px 0px;
+    margin: 15px 0 40px;
 }
 
 .original-status-btn {
