--- a/frontend/src/app/themes/guardian/tabs.scss
+++ b/frontend/src/app/themes/guardian/tabs.scss
@@ -5,12 +5,20 @@
         display: flex;
         flex-direction: column;
         position: relative;
+        background: transparent;
+    }
+
+    .p-tablist,
+    .p-tablist-content,
+    .p-tablist-tab-list {
+        background: transparent;
     }
 
     .p-tabpanels {
         width: 100%;
         height: 100%;
         position: relative;
+        background: transparent;
     }
 
     .p-tabpanel {
@@ -23,15 +31,16 @@
         font-size: 14px;
     }
 
-    .p-tabs .p-tablist-tab-list li .p-tab {
+    .p-tabs .p-tablist-tab-list .p-tab {
         padding: 12px 16px;
     }
 
-    .p-tabs .p-tablist-tab-list li .p-tab:not(.p-disabled):focus {
+    .p-tabs .p-tablist-tab-list .p-tab:not(.p-disabled):focus {
         box-shadow: none;
     }
 
-    .p-tabs .p-tablist-tab-list li.p-highlight .p-tab {
+    .p-tabs .p-tab.p-tab-active,
+    .p-tabs .p-tab[data-p-active='true'] {
         background: #ffffff;
         border-color: var(--guardian-primary-color, #4169E2);
         color: var(--guardian-primary-color, #4169E2);
@@ -49,6 +58,12 @@
 .guardian-header-tabs {
     .p-tabs {
         height: 41px;
+        background: transparent;
+    }
+
+    .p-tablist,
+    .p-tablist-content {
+        background: transparent;
     }
 
     .p-tablist-tab-list {
@@ -74,11 +89,12 @@
         color: #848FA9;
     }
 
-    .p-tablist-tab-list li:first-child .p-tab  {
+    .p-tablist-tab-list .p-tab:first-child {
         padding-left: 2px;
     }
 
-    .p-tabs .p-tablist-tab-list li.p-highlight .p-tab {
+    .p-tabs .p-tab.p-tab-active,
+    .p-tabs .p-tab[data-p-active='true'] {
         border-color: var(--guardian-primary-color, #4169E2);
         color: var(--guardian-primary-color, #4169E2);
         border-width: 0 0 2px 0;
