--- a/frontend/src/app/views/roles/roles-view.component.scss
+++ b/frontend/src/app/views/roles/roles-view.component.scss
@@ -127,6 +127,8 @@
     display: flex;
     flex-direction: column;
     margin-top: 15px;
+    row-gap: 40px;
+    margin-bottom: 20px;
 
     .actions-controls-container {
         display: flex;
