--- a/frontend/src/app/views/root-profile/root-profile.component.scss
+++ b/frontend/src/app/views/root-profile/root-profile.component.scss
@@ -760,6 +760,10 @@ mat-radio-button {
     min-width: 110px !important;
 }
 
+.tabs-nav {
+    margin: 15px 0 40px;
+}
+
 :host ::ng-deep .p-tab {
     text-decoration: none !important;
 }
