--- a/frontend/src/app/views/user-profile/user-profile.component.scss
+++ b/frontend/src/app/views/user-profile/user-profile.component.scss
@@ -1068,7 +1068,7 @@ mat-radio-button {
 }
 
 .tabs-nav {
-    margin: 24px 0px;
+    margin: 15px 0 40px;
 }
 
 .guardian-button {
